...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/business_register_page"
    android:background="?attr/background_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".activity.BusinessRegisterActivity">

    <ScrollView
...
